Small addjustements in Invoice classes files